enable_testing()
add_executable(lr_unittest lrTest.cpp)
add_executable(varArea_unittest varAreaTest.cpp)
add_executable(md_unittest mdTest.cpp)
add_executable(fa_unittest faTest.cpp)
add_executable(memoryleak_unittest memoryleakTest.cpp)
target_link_libraries(lr_unittest PUBLIC oblogmsg gtest)
target_link_libraries(varArea_unittest  PUBLIC oblogmsg gtest)
target_include_directories(varArea_unittest PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../src)
target_link_libraries(md_unittest PUBLIC oblogmsg gtest)
target_link_libraries(fa_unittest PUBLIC oblogmsg gtest)
target_link_libraries(memoryleak_unittest PUBLIC oblogmsg gtest)
add_test(lr_unittest lr_unittest)
add_test(md_unittest md_unittest)
add_test(fa_unittest fa_unittest)
add_test(varArea_unittest varArea_unittest)
add_test(memoryleak_unittest memoryleak_unittest)
